--- a/backend/templates/upload.html
+++ b/backend/templates/upload.html
@@ -2,7 +2,10 @@
 <html>
   <body>
     <form action="/upload" method="POST" enctype="multipart/form-data">
+      <label>The file</label>
       <input type="file" name="file" />
+      <label>Username</label>
+      <input type="text" name="username" />
       <input type="submit" />
     </form>
   </body>
