--- a/frontend/transcriber-front/src/components/participants/ParticipantsComponent.css
+++ b/frontend/transcriber-front/src/components/participants/ParticipantsComponent.css
@@ -1,12 +1,11 @@
 
 .participant-container {
-    width: 300px;
     text-align: left;
     font-size: calc(10px + 0.6vmin);
 }
 
-.participants-list {
-    width: 300px;
+.participants-list-container {
+    padding: 5px;
 }
 
 .header-text {
