--- a/frontend/transcriber-front/src/App.css
+++ b/frontend/transcriber-front/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  background-color: whitesmoke;
+
+}
+
+body {
+  background-color: whitesmoke !important;
+
 }
 
 .App-logo {
@@ -14,7 +21,6 @@
 }
 
 .App-header {
-  background-color: ghostwhite;
   min-height: 30vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +28,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
+  position: absolute;
+  top: 30%;
+  width: 40%;
+  left: 30%;
+  background-color: whitesmoke;
+
 }
 
 .App-link {
